JBR-537 improving the import process