@@ -11,8 +11,6 @@ import java.io.File;
 import java.util.*;
 import java.util.stream.Collectors;
 
-import static java.util.stream.Collectors.toList;
-
 @Component
 public class DuplicateManager {
     private static final Logger LOG = LoggerFactory.getLogger(DuplicateManager.class);
@@ -72,7 +70,7 @@ public class DuplicateManager {
                 checkDuplicateOfFile(files
                         .stream()
                         .filter(file -> file.getName().equals(nextEntry.getKey()))
-                        .collect(toList()),
+                        .toList(),
                         data);
                 data.increment(DuplicateDataDTO.DuplicateCountType.CHECKED);
             }
